compiler/testData/diagnostics/testsWithJsStdLib/name/illegalPackageName.kt
package <!INVALID_CHARACTERS!>`//`<!>

class A